--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>FrontSnapwriter</title>
+    <title>FrontSnapWriter</title>
     <link rel="stylesheet" href="./node_modules/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="./node_modules/codemirror/theme/monokai.css">
     <script src="./node_modules/codemirror/lib/codemirror.js"></script>
